grails-app/assets/stylesheets/app/styles.less
/* ... */
.panel:hover .on-hover:not(td) {
  display: block;
  &.inline {
    display: inline;
  }
}

.clearfix.no-padding {
  > div {
    padding-left: 0;
  }
  > div:last-of-type {
    padding-right: 0;
  }
}

.panel-title > a > i.fa.fa-star {
  color: gold;
}

.panel-heading {
  .panel-title {
    .left-title {
      .make-lg-column(6);
    }
    .right-title {
      text-align: right;
      .make-lg-column(6);
      > span > img, > .btn, > .btn-group {
        margin-bottom: 5px;
      }
    }
  }
  .states-container {
    &:after {
      clear: both;
      content: "";
      display: block;
    }
    margin-bottom: 10px;
  }
  .states {
    .progress;
    height: 18px;
    border: none;
    margin-bottom: 0;
    .state {
      opacity: 0.1;
      .transition(none);
      .state-name {
        display: none;
        font-size: 10px;
        font-weight: bold;
      }
      &.state-completed {
        opacity: 0.5;
        .state-name {
          display: inline;
        }
        &.state-current, &:hover {
          opacity: 1.0;
        }
      }
    }
  }
}

.progress.form-bar {
  border: none;
  background-color: @brand-primary;
  .progress-empty {
    text-align: center;
    color: @progress-bar-color;
  }
  .progress-bar {
    &.progress-bar-invisible {
      background-color: @brand-primary;
    }
    &.progress-bar-default {
      background-color: @state-suggested-light;
      color: @gray;
    }
    &.progress-bar-progress {
      background-color: @state-inProgress-light;
      color: @gray;
    }
    &.progress-bar-done {
      background-color: @state-done-light;
      color: @gray;
    }
    border-right: 3px solid @brand-primary;
    &.last-bar {
      border: none;
    }
  }
  &::after {
    border-style: solid;
    border-width: 16px 0 16px 16px;
    border-color: #ffffff transparent #ffffff @brand-primary;
  }
}

.well {
  .progress.form-bar {
    &::after {
      border-color: @well-bg transparent @well-bg @brand-primary;
    }
  }
}

.tab-content table.table {
  margin-bottom: 5px;
  &:not(:last-of-type) {
    margin-bottom: 0;
  }
}

/** tab tasks **/
a[data-toggle="tab"] button {
  z-index: 10;
  position: absolute;
  right: 5px;
  top: 5px;
}

.show-warning {
  left: 30px;
  position: absolute;
  top: 20px;
}

.invert {
  color: @invert-color;
}

.split-modal {
    .left-panel {
      .make-sm-column(3);
      .left-panel-bottom, .left-panel-header {
        margin: 15px;
      }
      .left-panel-body {
        height: 400px;
        overflow: auto;
      }
      .left-panel-bottom {
        text-align: center;
      }
    }
    .right-panel {
      .make-sm-column(9);
    }
    .hide-left-panel {
      .left-panel {
        display: none;
      }
      .right-panel {
        .make-sm-column(12);
      }
    }
}

.wizard, .split-modal {
  .modal-body {
    padding-left: 15px;
    padding-top: 0;
    padding-bottom: 0;
  }
  .steps, .right-panel {
    padding-bottom: 15px;
    padding-top: 15px;
    background: #fff;
  }
  .step {
    height: 100%;
  }
  .steps-indicator, .left-panel {
    background-color: @light-bg;
    padding: 0;
    list-style: none;
    .pagination {
      margin: 0;
    }
    ul.left-panel-body {
      > li {
        line-height: 40px;
        cursor: pointer;
        &.default {
          pointer-events: none;
        }
        > a {
          color: @gray-light;
          padding: 3px 15px;
          > i.fa-check {
            float: right;
            margin-top: 12px;
            margin-right: -6px;
          }
          &:hover {
            color: @gray-darker;
            > i {
              color: @gray-darker;
            }
          }
        }
        &.current, &.editing, &.current:hover, &.editing:hover {
          > a, > a:hover {
            background-color: @brand-primary;
            color: @body-bg;
            > i {
              color: @body-bg;
            }
          }
        }
      }
    }
  }
  .left-panel, .right-panel {
    min-height: 460px;
  }
  .right-panel {
    overflow: hidden;
    .btn-toolbar {
      margin-top: 15px;
    }
  }
  .wizard-next {
    text-align: right;
    margin-top: 10px;
  }
}

@media (max-width: @screen-xs-max) {
  .wizard {
    .steps-indicator > li {
      display: inline-block;
      > a {
        display: inline-block;
        padding: 3px 5px;
        i {
          float: none;
          margin-top: 0;
          margin-right: 0;
        }
      }
    }
  }
}

@media (min-width: @screen-sm-min) {
  .wizard {
    .steps {
    }
    .steps-indicator {
    }
    .modal-body div.wizard-row {
      background: @light-bg;
    }
  }
}

.atwho-view {
  border-radius: 0px;
  border-color: @brand-primary;
  box-shadow: rgba(0, 0, 0, 0.14902) 0px 4px 5px 0px;
  .cur {
    background: @brand-primary;
  }
  strong {
    color: #000;
  }
  ul {
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .3);
    padding: 4px;
    li {
      border: none;
    }
  }
}

.table.attachments {
  margin-bottom: 0;
  .filename {
    .text-overflow();
  }
}

.drop-zone {
  display: none;
}

.drop-enabled {
  .drop-zone {
    background-color: #fff;
    color: @gray-darker;
    position: absolute;
    display: block;
    opacity: 0.9;
    z-index: 100;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;
    h2 {
      text-align: center;
      .vertical-align();
      position: absolute;
      right: 0;
      left: 0;
      margin: 0;
    }
  }
}

.pdf-viewer {
  overflow: auto;
  max-height: 600px;
}

#user-avatar {
  .choose-file {
    display: inline;
    .btn {
      padding: 7px;
      font-size: 18px;
      cursor: pointer;
    }
    cursor: pointer;
  }
  img {
    padding: 3px;
    height: 40px;
    width: 40px;
    display: inline-block;
  }
  img.selected {
    padding: 0;
    border: 3px solid @brand-primary;
  }
}

ul.dropdown-menu[uib-datepicker-popup-wrap] {
  padding: 6px;
}

.input-group {
  .input-group-addon {
    & > i.fa-close {
      cursor: pointer;
    }
  }
}
/* ... */

